fix spacing part 4

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -22,11 +22,11 @@ nav_exclude: true
 * { margin: 0; padding: 0; }
 
 /* clearfix hack after Cederholm (group class name) */
-.group:after {
+/*.group:after {
   content: "";
   display: table;
   clear: both;
-}
+} */
 
 html, body { height: 100%; }
 
